Add EVENT constants to BackgroundGeolocation class.  Fix example android config

--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -25,7 +25,9 @@ allprojects {
         maven {
           url("${project(':transistorsoft-capacitor-background-geolocation').projectDir}/libs")
         }
-
+        maven {
+          url("${project(':transistorsoft-capacitor-background-fetch').projectDir}/libs")
+        }
 
     }
 }
