--- a/example/package.json
+++ b/example/package.json
@@ -24,7 +24,7 @@
     "@capacitor/ios": "^3.0.0-rc.3",
     "@ionic/angular": "^5.5.2",
     "@transistorsoft/capacitor-background-fetch": "^0.0.3",
-    "@transistorsoft/capacitor-background-geolocation": "^0.0.7",
+    "@transistorsoft/capacitor-background-geolocation": "file:..",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
