--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
-{
-  "name": "@transistorsoft/capacitor-background-geolocation",
+name": "@transistorsoft/capacitor-background-geolocation",
   "version": "0.0.12",
   "description": "The most sophisticated cross platform Capacitor background location tracking & geofencing module with battery-conscious motion-detection intelligence",
   "main": "dist/plugin.cjs.js",
@@ -54,7 +53,7 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
-    "@transistorsoft/capacitor-background-fetch": "^0.0.3"
+    "@transistorsoft/capacitor-background-fetch": "^0.0.5"
   },
   "devDependencies": {
     "@capacitor/android": "next",
