--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-name": "@transistorsoft/capacitor-background-geolocation",
+{
+  "name": "@transistorsoft/capacitor-background-geolocation",
   "version": "0.0.12",
   "description": "The most sophisticated cross platform Capacitor background location tracking & geofencing module with battery-conscious motion-detection intelligence",
   "main": "dist/plugin.cjs.js",
@@ -53,7 +54,7 @@ name": "@transistorsoft/capacitor-background-geolocation",
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
-    "@transistorsoft/capacitor-background-fetch": "^0.0.5"
+    "@transistorsoft/capacitor-background-fetch": "^0.0.3"
   },
   "devDependencies": {
     "@capacitor/android": "next",
