--- a/example/angular/package.json
+++ b/example/angular/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "exammple",
+  "name": "BGGeolocation Demo",
   "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "https://ionicframework.com/",
+  "author": "Transistor Software<info@transistorsoft.com>",
+  "homepage": "https://www.transistorsoft.com",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -13,35 +13,38 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~11.2.0",
-    "@angular/core": "~11.2.0",
-    "@angular/forms": "~11.2.0",
-    "@angular/platform-browser": "~11.2.0",
-    "@angular/platform-browser-dynamic": "~11.2.0",
-    "@angular/router": "~11.2.0",
-    "@capacitor/android": "^3.2.5",
-    "@capacitor/core": "^3.2.5",
-    "@capacitor/ios": "^3.2.5",
+    "@angular/common": "~12.1.1",
+    "@angular/core": "~12.1.1",
+    "@angular/forms": "~12.1.1",
+    "@angular/platform-browser": "~12.1.1",
+    "@angular/platform-browser-dynamic": "~12.1.1",
+    "@angular/router": "~12.1.1",
+    "@capacitor/android": "3.3.0",
+    "@capacitor/app": "1.0.6",
+    "@capacitor/core": "^3.3.0",
+    "@capacitor/haptics": "1.1.3",
+    "@capacitor/ios": "^3.3.1",
+    "@capacitor/keyboard": "1.1.3",
     "@capacitor/storage": "^1.2.2",
     "@ionic/angular": "^5.5.2",
     "@transistorsoft/capacitor-background-fetch": "^0.0.4",
     "@transistorsoft/capacitor-background-geolocation": "file:../..",
     "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "tslib": "^2.2.0",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.4",
-    "@angular-eslint/builder": "2.0.2",
-    "@angular-eslint/eslint-plugin": "2.0.2",
-    "@angular-eslint/eslint-plugin-template": "2.0.2",
-    "@angular-eslint/template-parser": "2.0.2",
-    "@angular/cli": "~11.2.4",
-    "@angular/compiler": "~11.2.0",
-    "@angular/compiler-cli": "~11.2.0",
-    "@angular/language-service": "~11.2.0",
-    "@capacitor/cli": "^3.2.5",
-    "@ionic/angular-toolkit": "^3.1.1",
+    "@angular-devkit/build-angular": "~12.1.1",
+    "@angular-eslint/builder": "~12.0.0",
+    "@angular-eslint/eslint-plugin": "~12.0.0",
+    "@angular-eslint/eslint-plugin-template": "~12.0.0",
+    "@angular-eslint/template-parser": "~12.0.0",
+    "@angular/cli": "~12.1.1",
+    "@angular/compiler": "~12.1.1",
+    "@angular/compiler-cli": "~12.1.1",
+    "@angular/language-service": "~12.0.1",
+    "@capacitor/cli": "^3.3.0",
+    "@ionic/angular-toolkit": "^4.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
@@ -53,7 +56,7 @@
     "eslint-plugin-prefer-arrow": "1.2.2",
     "jasmine-core": "~3.8.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.2.0",
+    "karma": "~6.3.2",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-coverage-istanbul-reporter": "~3.0.2",
@@ -61,7 +64,7 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "typescript": "~4.0.2"
+    "typescript": "~4.2.4"
   },
-  "description": "An Ionic project"
+  "description": "Background Geolocation Demo"
 }
