--- a/example/react/package.json
+++ b/example/react/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@capacitor/android": "^3.2.5",
     "@capacitor/app": "1.0.5",
-    "@capacitor/core": "3.2.5",
+    "@capacitor/core": "^3.3.1",
     "@capacitor/haptics": "1.1.2",
     "@capacitor/ios": "^3.2.5",
     "@capacitor/keyboard": "1.1.2",
