--- a/example/react/android/app/src/main/AndroidManifest.xml
+++ b/example/react/android/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
             android:name="com.transistorsoft.backgroundgeolocation.capacitor.MainActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBarLaunch"
+            android:exported="true"
             android:launchMode="singleTask">
 
             <intent-filter>
