--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,7 +9,7 @@ ext {
 buildscript {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.3'
@@ -60,7 +60,6 @@ android {
 
 repositories {
     google()
-    jcenter()
     mavenCentral()
 }
 
