--- a/example/react/android/app/src/main/AndroidManifest.xml
+++ b/example/react/android/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
+        android:name=".Application"
         android:theme="@style/AppTheme">
 
         <activity
