--- a/android/build.gradle
+++ b/android/build.gradle
@@ -29,6 +29,8 @@ def DEFAULT_OK_HTTP_VERSION                         = "3.12.13"
 def DEFAULT_ANDROID_PERMISSIONS_VERSION             = "2.1.6"
 def DEFAULT_EVENTBUS_VERSION                        = "3.3.1"
 def DEFAULT_LOCAL_BROADCAST_MANAGER_VERSION         = "1.0.0"
+def DEFAULT_LIFE_CYCLE_RUNTIME_VERSION              = "2.4.1"
+def DEFAULT_LIFE_CYCLE_EXTENSIONS_VERSION           = "2.2.0"
 
 def safeExtGet(prop, fallback) {
     rootProject.ext.has(prop) ? rootProject.ext.get(prop) : fallback
@@ -72,6 +74,9 @@ dependencies {
     def eventBusVersion = safeExtGet('eventBusVersion', DEFAULT_EVENTBUS_VERSION)
     def localBroadcastManagerVersion = safeExtGet('localBroadcastManagerVersion', DEFAULT_LOCAL_BROADCAST_MANAGER_VERSION)
 
+    def lifeCycleRuntimeVersion = safeExtGet('lifeCycleRuntimeVersion', DEFAULT_LIFE_CYCLE_RUNTIME_VERSION)
+    def lifeCycleExtensionsVersion = safeExtGet('lifeCycleExtensionsVersion', DEFAULT_LIFE_CYCLE_EXTENSIONS_VERSION)
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':capacitor-android')
     implementation "androidx.appcompat:appcompat:$androidxAppCompatVersion"
@@ -87,4 +92,8 @@ dependencies {
     implementation 'org.slf4j:slf4j-api:1.7.25'
     implementation 'com.github.tony19:logback-android:2.0.0'
     implementation "io.github.nishkarsh:android-permissions:$androidPermissionsVersion"
+    // LifeCycleObserver
+    implementation "androidx.lifecycle:lifecycle-runtime:$lifeCycleRuntimeVersion"
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifeCycleExtensionsVersion"
+
 }
