--- a/example/react/ios/App/Podfile
+++ b/example/react/ios/App/Podfile
@@ -13,7 +13,7 @@ def capacitor_pods
   pod 'CapacitorHaptics', :path => '../../node_modules/@capacitor/haptics'
   pod 'CapacitorKeyboard', :path => '../../node_modules/@capacitor/keyboard'
   pod 'CapacitorStorage', :path => '../../node_modules/@capacitor/storage'
-  pod 'TransistorsoftCapacitorBackgroundFetch', :path => '../../../../../capacitor-background-fetch'
+  pod 'TransistorsoftCapacitorBackgroundFetch', :path => '../../node_modules/@transistorsoft/capacitor-background-fetch'
   pod 'TransistorsoftCapacitorBackgroundGeolocation', :path => '../../../..'
 end
 
