--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,6 +6,7 @@ ext {
 }
 
 
+
 buildscript {
     repositories {
         google()
@@ -24,7 +25,7 @@ def DEFAULT_TARGET_SDK_VERSION                      = 30
 def DEFAULT_APP_COMPAT_VERSION                      = "1.4.1"
 
 // Plugin dependencies
-def DEFAULT_GOOGLE_PLAY_SERVICES_LOCATION_VERSION   = "19.0.1"
+def DEFAULT_GOOGLE_PLAY_SERVICES_LOCATION_VERSION   = "20.0.0"
 def DEFAULT_OK_HTTP_VERSION                         = "3.12.13"
 def DEFAULT_ANDROID_PERMISSIONS_VERSION             = "2.1.6"
 def DEFAULT_EVENTBUS_VERSION                        = "3.3.1"
@@ -69,6 +70,15 @@ repositories {
 dependencies {
     def androidxAppCompatVersion = safeExtGet('androidxAppCompatVersion', DEFAULT_APP_COMPAT_VERSION)
     def playServicesLocationVersion = safeExtGet('googlePlayServicesLocationVersion', DEFAULT_GOOGLE_PLAY_SERVICES_LOCATION_VERSION)
+    def locationMajorVersion = playServicesLocationVersion.split('\\.')[0] as int
+    if (locationMajorVersion > 20) {
+        println("*****************************************************")
+        println("* [WARNING] background-geolocation requires a maximum googlePlayServicesLocationVersion of 20.0.0 due to breaking changes in v21")
+        println("* googlePlayServicesLocationVersion has been overridden to $DEFAULT_GOOGLE_PLAY_SERVICES_LOCATION_VERSION")
+        println("*****************************************************")
+        playServicesLocationVersion = DEFAULT_GOOGLE_PLAY_SERVICES_LOCATION_VERSION
+    }
+
     def okHttpVersion = safeExtGet('okHttpVersion', DEFAULT_OK_HTTP_VERSION)
     def androidPermissionsVersion = safeExtGet('androidPermissionsVersion', DEFAULT_ANDROID_PERMISSIONS_VERSION)
     def eventBusVersion = safeExtGet('eventBusVersion', DEFAULT_EVENTBUS_VERSION)
