--- a/android/build.gradle
+++ b/android/build.gradle
@@ -71,13 +71,6 @@ dependencies {
     def androidxAppCompatVersion = safeExtGet('androidxAppCompatVersion', DEFAULT_APP_COMPAT_VERSION)
     def playServicesLocationVersion = safeExtGet('googlePlayServicesLocationVersion', DEFAULT_GOOGLE_PLAY_SERVICES_LOCATION_VERSION)
     def locationMajorVersion = playServicesLocationVersion.split('\\.')[0] as int
-    if (locationMajorVersion > 20) {
-        println("*****************************************************")
-        println("* [WARNING] background-geolocation requires a maximum googlePlayServicesLocationVersion of 20.0.0 due to breaking changes in v21")
-        println("* googlePlayServicesLocationVersion has been overridden to $DEFAULT_GOOGLE_PLAY_SERVICES_LOCATION_VERSION")
-        println("*****************************************************")
-        playServicesLocationVersion = DEFAULT_GOOGLE_PLAY_SERVICES_LOCATION_VERSION
-    }
 
     def okHttpVersion = safeExtGet('okHttpVersion', DEFAULT_OK_HTTP_VERSION)
     def androidPermissionsVersion = safeExtGet('androidPermissionsVersion', DEFAULT_ANDROID_PERMISSIONS_VERSION)
@@ -94,7 +87,12 @@ dependencies {
     androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
 
-    api(group: 'com.transistorsoft', name:'tslocationmanager', version: '+')
+    if (locationMajorVersion >= 21) {
+        api(group: 'com.transistorsoft', name:'tslocationmanager-v21', version: '+')
+    } else {
+        api(group: 'com.transistorsoft', name:'tslocationmanager', version: '+')
+    }
+
     implementation "androidx.localbroadcastmanager:localbroadcastmanager:$localBroadcastManagerVersion"
     implementation "com.google.android.gms:play-services-location:$playServicesLocationVersion"
     api "org.greenrobot:eventbus:$eventBusVersion"
