--- a/example/react/android/app/build.gradle
+++ b/example/react/android/app/build.gradle
@@ -3,6 +3,9 @@ apply plugin: 'com.android.application'
 Project background_geolocation = project(':transistorsoft-capacitor-background-geolocation')
 apply from: "${background_geolocation.projectDir}/app.gradle"
 
+
+println("************* CAPACITOR_DEMO_RELEASE_STORE_FILE? ${project.hasProperty('CAPACITOR_DEMO_RELEASE_STORE_FILE')}");
+
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
     defaultConfig {
@@ -18,9 +21,23 @@ android {
             ignoreAssetsPattern '!.svn:!.git:!.ds_store:!*.scc:.*:!CVS:!thumbs.db:!picasa.ini:!*~'
         }
     }
+    signingConfigs {
+        release {
+            /**
+            * My signing configs for publishing SampleApp to play store.  You won't need this
+            */
+            if (project.hasProperty('CAPACITOR_DEMO_RELEASE_STORE_FILE')) {
+                storeFile file(CAPACITOR_DEMO_RELEASE_STORE_FILE)
+                storePassword CAPACITOR_DEMO_RELEASE_STORE_FILE_RELEASE_STORE_PASSWORD
+                keyAlias CAPACITOR_DEMO_RELEASE_STORE_FILE_RELEASE_KEY_ALIAS
+                keyPassword CAPACITOR_DEMO_RELEASE_STORE_FILE_RELEASE_KEY_PASSWORD
+            }
+        }
+    }
     buildTypes {
         release {
             minifyEnabled false
+            signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             // [background-geolocation] Proguard-rules
             proguardFiles "${background_geolocation.projectDir}/proguard-rules.pro"
