--- a/example/angular/package.json
+++ b/example/angular/package.json
@@ -19,15 +19,15 @@
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
-    "@capacitor/android": "3.3.0",
-    "@capacitor/app": "1.0.6",
-    "@capacitor/core": "^3.3.0",
-    "@capacitor/haptics": "1.1.3",
-    "@capacitor/ios": "^3.3.1",
-    "@capacitor/keyboard": "1.1.3",
-    "@capacitor/storage": "^1.2.2",
+    "@capacitor/android": "^5.0.0",
+    "@capacitor/app": "^5.0.0",
+    "@capacitor/core": "^5.0.0",
+    "@capacitor/haptics": "^5.0.0",
+    "@capacitor/ios": "^5.0.0",
+    "@capacitor/keyboard": "^5.0.0",
+    "@capacitor/preferences": "^5.0.0",
     "@ionic/angular": "^5.5.2",
-    "@transistorsoft/capacitor-background-fetch": "^0.0.4",
+    "@transistorsoft/capacitor-background-fetch": "^5.0.0",
     "@transistorsoft/capacitor-background-geolocation": "file:../..",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
@@ -43,7 +43,7 @@
     "@angular/compiler": "~12.1.1",
     "@angular/compiler-cli": "~12.1.1",
     "@angular/language-service": "~12.0.1",
-    "@capacitor/cli": "^3.3.0",
+    "@capacitor/cli": "^5.0.2",
     "@ionic/angular-toolkit": "^4.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
