[Android] Android 14 (SDK 34) support

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -32,7 +32,7 @@ def DEFAULT_TARGET_SDK_VERSION                      = 30
 def DEFAULT_APP_COMPAT_VERSION                      = "1.4.1"
 
 // Plugin dependencies
-def DEFAULT_GOOGLE_PLAY_SERVICES_LOCATION_VERSION   = "20.0.0"
+def DEFAULT_PLAY_SERVICES_LOCATION_VERSION          = "20.0.0"
 def DEFAULT_HMS_LOCATION_VERSION                    = "6.9.0.300"
 def DEFAULT_OK_HTTP_VERSION                         = "3.12.13"
 def DEFAULT_ANDROID_PERMISSIONS_VERSION             = "2.1.6"
@@ -42,6 +42,8 @@ def DEFAULT_LIFE_CYCLE_RUNTIME_VERSION              = "2.4.1"
 def DEFAULT_LIFE_CYCLE_EXTENSIONS_VERSION           = "2.2.0"
 def DEFAULT_LOGBACK_VERSION                         = "3.0.0"
 def DEFAULT_SLF4J_VERSION                           = "2.0.7"
+def DEFAULT_WORK_VERSION                            = "2.8.1"
+def DEFAULT_CONCURRENT_FUTURES_VERSION              = "1.1.0"
 
 def safeExtGet(prop, fallback) {
     rootProject.ext.has(prop) ? rootProject.ext.get(prop) : fallback
@@ -84,7 +86,7 @@ repositories {
 
 dependencies {
     def androidxAppCompatVersion = safeExtGet('androidxAppCompatVersion', DEFAULT_APP_COMPAT_VERSION)
-    def playServicesLocationVersion = safeExtGet('googlePlayServicesLocationVersion', DEFAULT_GOOGLE_PLAY_SERVICES_LOCATION_VERSION)
+    def playServicesLocationVersion = safeExtGet('playServicesLocationVersion', safeExtGet('googlePlayServicesLocationVersion', DEFAULT_PLAY_SERVICES_LOCATION_VERSION))
     def hmsLocationVersion = safeExtGet('hmsLocationVersion', DEFAULT_HMS_LOCATION_VERSION);
     def okHttpVersion = safeExtGet('okHttpVersion', DEFAULT_OK_HTTP_VERSION)
     def androidPermissionsVersion = safeExtGet('androidPermissionsVersion', DEFAULT_ANDROID_PERMISSIONS_VERSION)
@@ -128,5 +130,11 @@ dependencies {
     // LifeCycleObserver
     implementation "androidx.lifecycle:lifecycle-runtime:$lifeCycleRuntimeVersion"
     implementation "androidx.lifecycle:lifecycle-extensions:$lifeCycleExtensionsVersion"
+     
+    // WorkManager
+    def workVersion = safeExtGet('workVersion', DEFAULT_WORK_VERSION)
+    def concurrentFuturesVersion = safeExtGet('concurrentFuturesVersion', DEFAULT_CONCURRENT_FUTURES_VERSION)
+    implementation "androidx.work:work-runtime:$workVersion"
+    implementation "androidx.concurrent:concurrent-futures:$concurrentFuturesVersion"
 
 }
