Re-generate new Capacitor react app.  Migrate src and dependencies into newly created app

--- a/example/react/android/app/src/main/AndroidManifest.xml
+++ b/example/react/android/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
 
         <activity
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|smallestScreenSize|screenLayout|uiMode"
-            android:name="com.transistorsoft.backgroundgeolocation.capacitor.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBarLaunch"
             android:exported="true"
@@ -24,7 +24,7 @@
             </intent-filter>
 
         </activity>
-
+        <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyDXTDr2C3iU9jgwpNVpZjeWzOc-DyCgkt8"/>
         <meta-data android:name="com.transistorsoft.locationmanager.license" android:value="96453dbb4ab9365552809eb60147876b07d54aa0eb61a8b7be01095782897336" />
         <meta-data android:name="com.transistorsoft.locationmanager.hms.license" android:value="d10b4994830af3b62aabb6577b60f6e9bb3aa7357155b7c6f83082d8a47fe890" />
         <provider
