--- a/example/react/ionic.config.json
+++ b/example/react/ionic.config.json
@@ -1,7 +1,7 @@
 {
-  "name": "react",
+  "name": "foo",
   "integrations": {
     "capacitor": {}
   },
-  "type": "react"
+  "type": "react-vite"
 }
