--- a/example/react/android/app/src/main/assets/capacitor.config.json
+++ b/example/react/android/app/src/main/assets/capacitor.config.json
@@ -1,6 +1,8 @@
 {
 	"appId": "com.transistorsoft.backgroundgeolocation.capacitor",
-	"appName": "BGGeolocation",
-	"webDir": "build",
-	"bundledWebRuntime": false
+	"appName": "foo",
+	"webDir": "dist",
+	"server": {
+		"androidScheme": "https"
+	}
 }
