Re-factor both examples to use @capacitor/google-maps (I hate this component)

--- a/example/react/android/app/src/main/assets/capacitor.config.json
+++ b/example/react/android/app/src/main/assets/capacitor.config.json
@@ -1,6 +1,6 @@
 {
 	"appId": "com.transistorsoft.backgroundgeolocation.capacitor",
-	"appName": "foo",
+	"appName": "BG Geo",
 	"webDir": "dist",
 	"server": {
 		"androidScheme": "https"
