--- a/example/angular/android/app/src/main/AndroidManifest.xml
+++ b/example/angular/android/app/src/main/AndroidManifest.xml
@@ -6,8 +6,11 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
+        </activity>        
+        <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyDXTDr2C3iU9jgwpNVpZjeWzOc-DyCgkt8"/>
         <meta-data android:name="com.transistorsoft.locationmanager.license" android:value="96453dbb4ab9365552809eb60147876b07d54aa0eb61a8b7be01095782897336" />
+        <meta-data android:name="com.transistorsoft.locationmanager.hms.license" android:value="d10b4994830af3b62aabb6577b60f6e9bb3aa7357155b7c6f83082d8a47fe890" />
+
         <provider android:authorities="${applicationId}.fileprovider" android:exported="false" android:grantUriPermissions="true" android:name="androidx.core.content.FileProvider">
             <meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/file_paths" />
         </provider>
