--- a/example/react/android/app/capacitor.build.gradle
+++ b/example/react/android/app/capacitor.build.gradle
@@ -9,6 +9,7 @@ android {
 
 apply from: "../capacitor-cordova-android-plugins/cordova.variables.gradle"
 dependencies {
+    implementation project(':capacitor-action-sheet')
     implementation project(':capacitor-app')
     implementation project(':capacitor-google-maps')
     implementation project(':capacitor-haptics')
