--- a/example/react/ios/App/App/capacitor.config.json
+++ b/example/react/ios/App/App/capacitor.config.json
@@ -1,6 +1,6 @@
 {
 	"appId": "com.transistorsoft.backgroundgeolocation.capacitor",
-	"appName": "foo",
+	"appName": "BG Geo",
 	"webDir": "dist",
 	"server": {
 		"androidScheme": "https"
