--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@transistorsoft/capacitor-background-geolocation",
-  "version": "5.4.0",
+  "version": "5.4.1",
   "description": "The most sophisticated cross platform Capacitor background location tracking & geofencing module with battery-conscious motion-detection intelligence",
   "main": "dist/plugin.cjs.js",
   "module": "dist/index.js",
@@ -14,6 +14,7 @@
     "android/proguard-rules.pro",
     "dist/",
     "ios/Plugin/",
+    "ios/Resources/",
     "ios/TSLocationManager.xcframework/",
     "TransistorsoftCapacitorBackgroundGeolocation.podspec"
   ],
@@ -54,7 +55,7 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
-    "@transistorsoft/capacitor-background-fetch": "^5.2.2"
+    "@transistorsoft/capacitor-background-fetch": "^5.2.4"
   },
   "devDependencies": {
     "@capacitor/android": "^5.0.0",
