Upgrade to Capacitor v6

--- a/example/angular/ios/App/App/capacitor.config.json
+++ b/example/angular/ios/App/App/capacitor.config.json
@@ -1,1 +1,14 @@
-{}
+{
+	"packageClassList": [
+		"ActionSheetPlugin",
+		"AppPlugin",
+		"CapacitorGoogleMapsPlugin",
+		"CapacitorGoogleMapsPlugin",
+		"HapticsPlugin",
+		"KeyboardPlugin",
+		"PreferencesPlugin",
+		"StatusBarPlugin",
+		"BackgroundFetchModule",
+		"BackgroundGeolocationModule"
+	]
+}
