--- a/example/react/package.json
+++ b/example/react/package.json
@@ -12,19 +12,19 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@capacitor/action-sheet": "^5.0.6",
-    "@capacitor/android": "5.4.0",
-    "@capacitor/app": "5.0.6",
-    "@capacitor/core": "5.4.0",
+    "@capacitor/action-sheet": "^6.0.0",
+    "@capacitor/android": "^6.0.0",
+    "@capacitor/app": "^6.0.0",
+    "@capacitor/core": "^6.0.0",
     "@capacitor/google-maps": "^5.3.3",
-    "@capacitor/haptics": "5.0.6",
-    "@capacitor/ios": "5.4.0",
-    "@capacitor/keyboard": "5.0.6",
-    "@capacitor/preferences": "^5.0.6",
-    "@capacitor/status-bar": "5.0.6",
+    "@capacitor/haptics": "^6.0.0",
+    "@capacitor/ios": "^6.0.0",
+    "@capacitor/keyboard": "^6.0.0",
+    "@capacitor/preferences": "^6.0.0",
+    "@capacitor/status-bar": "^6.0.0",
     "@ionic/react": "^7.0.0",
     "@ionic/react-router": "^7.0.0",
-    "@transistorsoft/capacitor-background-fetch": "^5.2.4",
+    "@transistorsoft/capacitor-background-fetch": "^6.0.0",
     "@transistorsoft/capacitor-background-geolocation": "file:../..",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
@@ -37,7 +37,7 @@
     "react-router-dom": "^5.3.4"
   },
   "devDependencies": {
-    "@capacitor/cli": "5.4.0",
+    "@capacitor/cli": "^6.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
@@ -49,6 +49,7 @@
     "eslint": "^8.35.0",
     "eslint-plugin-react": "^7.32.2",
     "jsdom": "^22.1.0",
+    "terser": "^5.30.4",
     "typescript": "^5.1.6",
     "vite": "^4.3.9",
     "vitest": "^0.32.2"
