--- a/example/angular/package.json
+++ b/example/angular/package.json
@@ -21,18 +21,18 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
-    "@capacitor/action-sheet": "^5.0.6",
-    "@capacitor/android": "5.4.0",
-    "@capacitor/app": "5.0.6",
-    "@capacitor/core": "5.4.0",
+    "@capacitor/action-sheet": "^6.0.0",
+    "@capacitor/android": "^6.0.0",
+    "@capacitor/app": "^6.0.0",
+    "@capacitor/core": "^6.0.0",
     "@capacitor/google-maps": "^5.3.3",
-    "@capacitor/haptics": "5.0.6",
-    "@capacitor/ios": "5.4.0",
-    "@capacitor/keyboard": "5.0.6",
-    "@capacitor/preferences": "^5.0.6",
-    "@capacitor/status-bar": "5.0.6",
+    "@capacitor/haptics": "^6.0.0",
+    "@capacitor/ios": "^6.0.0",
+    "@capacitor/keyboard": "^6.0.0",
+    "@capacitor/preferences": "^6.0.0",
+    "@capacitor/status-bar": "^6.0.0",
     "@ionic/angular": "^7.0.0",
-    "@transistorsoft/capacitor-background-fetch": "^5.2.4",
+    "@transistorsoft/capacitor-background-fetch": "^6.0.0",
     "@transistorsoft/capacitor-background-geolocation": "file:../..",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -48,7 +48,7 @@
     "@angular/cli": "^16.0.0",
     "@angular/compiler-cli": "^16.0.0",
     "@angular/language-service": "^16.0.0",
-    "@capacitor/cli": "5.4.0",
+    "@capacitor/cli": "^6.0.0",
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^12.11.1",
