[RELEASE] 7.2.5: Android ELF alignment

--- a/example/angular/ios/App/App/capacitor.config.json
+++ b/example/angular/ios/App/App/capacitor.config.json
@@ -7,7 +7,7 @@
 		"KeyboardPlugin",
 		"PreferencesPlugin",
 		"StatusBarPlugin",
-		"BackgroundFetchModule",
+		"BackgroundFetchPlugin",
 		"BackgroundGeolocationModule"
 	]
 }
